Added url params

--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
     </section>
 
     <section class="splash">
-        
-
-
-
+        <a href="photo.html">
+            <h2>In progress, check out the photos</h2>
+        </a>
     </section>
     <section class="footer">
-        <p>Copyright Kristian Noya 2024</p>
+        <p>Copyright Kristian Noya 2025</p>
     </section>
   </body>
 </html>
