--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>knoya photoblog</title>
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
   </head>
   <body>
     <section class="title-bar">
@@ -39,6 +42,12 @@
         </div>
     </section>
 
+    <section class="map" id="map">
+        <div class="map-container" id="mapContainer">
+            
+        </div>
+    </section>
+
     <section class="img-grid" id="imgGrid"></section>
 
     <div class="pagination">
@@ -49,6 +58,7 @@
         </div>
         <div class="next">&gt</div>
         <div class="last">&#187</div>
+        <div class="map-button">Map</div>
     </div>
 
     <section class="footer">
@@ -59,6 +69,9 @@
 
 
     <script src="static/js/photos.js" type="text/javascript"></script> 
-    <script src="static/js/photo.js" type="text/javascript"></script> 
+    <script src="static/js/photo.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
   </body>
 </html>
