map progress made, saving progress before switch to scripted config generation

--- a/photo.html
+++ b/photo.html
@@ -44,6 +44,7 @@
 
     <section class="map" id="map">
         <div class="map-container" id="mapContainer">
+            <div class="map-close-button">&#x2715</div>
             
         </div>
     </section>
