mostly working, for deployment

--- a/photo.html
+++ b/photo.html
@@ -34,6 +34,7 @@
             <img class="theater-img" id="theaterImg" src=""/>
             <div class="theater-controls">
                 <div class="theater-control-left">&lt Prev</div>
+                <div class="theater-control-map">Map</div>
                 <div class="theater-control-right">Next &gt</div>
             </div>
         </div>
@@ -43,9 +44,10 @@
     </section>
 
     <section class="map" id="map">
-        <div class="map-container" id="mapContainer">
-            <div class="map-close-button">&#x2715</div>
-            
+        <div class="map-container" id="mapContainer"></div>
+        <div class="map-controls">
+            <div class="map-close-button">Close</div>
+            <div class="map-all-button">All</div>            
         </div>
     </section>
 
